# Matuna

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSES.txt  README.md
samples/: CMakeLists.txt  MNISTAssetLoader.h
samples/Matuna.MNISTSample1/: MNISTSample1.cpp
samples/Matuna.MNISTSample2/: MNISTSample2.cpp
samples/Matuna.MNISTSample3/: MNISTSample3.cpp
src/: CMakeLists.txt  Version.h.in.cmake
src/CNN/: ATMLActivationFunctionEnum.h  ATMLPrecisionEnum.h  BackPropLayer.cpp  BackPropLayer.h  CMakeLists.txt  CNN.cpp  CNN.h  CNNConfig.cpp  CNNConfig.h  CNNFactoryVisitor.cpp  CNNFactoryVisitor.h  CNNTrainer.cpp  CNNTrainer.h  ConvNet.cpp  ConvNetFactoryVisitor.cpp  ConvolutionLayerConfig.cpp  ConvolutionLayerConfig.h  ForwardBackPropLayer.cpp  ForwardBackPropLayer.h  ForwardBackPropLayerConfig.cpp  GradientDescentConfig.cpp  GradientDescentConfig.h  IAlgorithmConfig.h  ILayerConfig.h  ILayerConfigVisitor.h  InterlockHelper.cpp  InterlockHelper.h  Layer.cpp  Layer.h  LayerDescriptions.h  OutputLayer.cpp  OutputLayer.h  OutputLayerConfig.cpp  OutputLayerConfig.h  PerceptronLayerConfig.cpp  PerceptronLayerConfig.h  StandardOutputLayerConfig.cpp  StandardOutputLayerConfig.h  TrainableCNN.cpp  TrainableCNN.h
src/CNNOCL/: AccumulateVectorKernel.cpp  AccumulateVectorKernel.h  AccumulateVectorScalarKernel.cpp  BackConvolutionKernel.cpp  BackPerceptronKernel.cpp  BackPerceptronKernel.h  CMakeLists.txt  CNNOCL.cpp  CNNOCL.h  CNNOCLFactoryVisitor.cpp  CNNOCLFactoryVisitor.h  ConvNetOCL.cpp  ConvolutionKernel.h  ConvolutionLayer.cpp  ConvolutionLayer.h  ErrorKernel.cpp  ForwardPerceptronKernel.cpp  GradientPerceptronKernel.h  ImageBackPerceptronKernel.cpp  ImageForwardPerceptronKernel.cpp  ImageOutputKernel.h  MultiplyAllUnitsKernel.h  MultiplyWithOffsetKernel.cpp  OutputKernel.cpp  OutputKernel.h  PerceptronLayer.cpp  PerceptronLayer.h  SimpleSumKernel.h  StandardOutputLayer.cpp  SumAllUnitsKernel.cpp  SumAllUnitsKernel.h  SumUnitKernel.cpp
src/CNNOpenCL/: AccumulateVectorKernel.cpp  AccumulateVectorKernel.h  AccumulateVectorScalarKernel.cpp  AccumulateVectorScalarKernel.h  BackConvolutionKernel.cpp  BackConvolutionKernel.h  BackPerceptronKernel.cpp  CMakeLists.txt  CNNOpenCL.cpp  CNNOpenCL.h  CNNOpenCLFactoryVisitor.cpp  CNNOpenCLFactoryVisitor.h  ConvolutionKernel.cpp  ConvolutionKernel.h  ConvolutionLayer.cpp  ConvolutionLayer.h  DivideByScalarKernel.cpp  DivideByScalarKernel.h  ErrorKernel.cpp  ErrorKernel.h  ForwardPerceptronKernel.cpp  ForwardPerceptronKernel.h  GradientPerceptronKernel.cpp  GradientPerceptronKernel.h  ImageBackPerceptronKernel.cpp  ImageBackPerceptronKernel.h  ImageErrorKernel.cpp  ImageForwardPerceptronKernel.cpp  ImageForwardPerceptronKernel.h  ImageGradientPerceptronKernel.cpp  ImageGradientPerceptronKernel.h  ImageOutputKernel.cpp  ImageOutputKernel.h  MultiplyAllUnitsKernel.cpp  MultiplyAllUnitsKernel.h  MultiplyWithOffsetKernel.cpp  MultiplyWithOffsetKernel.h  OpenCLForwardBackPropLayer.cpp  OpenCLForwardBackPropLayer.h  OutputKernel.cpp  (+12 more)
src/ConvNet/: BackPropLayer.h  ConvNet.h  ConvNetConfig.cpp  ConvNetTrainer.cpp  ConvolutionLayerConfig.h  ForwardBackPropLayer.cpp  ForwardBackPropLayerConfig.cpp  ILayerConfig.h  ILayerConfigVisitor.h  OutputLayer.h
src/Helper/: CMakeLists.txt  FileHelper.cpp  FileHelper.h  Path.cpp  Path.h
src/Math/: CMakeLists.txt  Matrix.cpp  Matrix.h
src/Matuna.ConvNet/: BackPropLayer.cpp  CMakeLists.txt  ConvNetConfig.cpp  ConvNetConfig.h  ConvNetFactoryVisitor.cpp  ConvNetFactoryVisitor.h  ConvNetTrainer.cpp  ConvNetTrainer.h  ConvolutionLayerConfig.cpp  ForwardBackPropLayer.cpp  GradientDescentConfig.cpp  GradientDescentConfig.h  IAlgorithmConfig.h  InterlockHelper.cpp  InterlockHelper.h  Layer.h  MatunaComputationPrecision.h  MatunaConnectionTypeEnum.h  MatunaErrorFunctionEnum.h  MaxPoolingLayerConfig.cpp  OutputLayer.cpp  OutputLayerConfig.cpp  OutputLayerConfig.h  PerceptronLayerConfig.cpp  StandardOutputLayerConfig.cpp  StandardOutputLayerConfig.h  TrainableConvNet.cpp  TrainableConvNet.h  VanillaSamplingLayerConfig.cpp
src/Matuna.Helper/: CMakeLists.txt  Converter.cpp  Converter.h  FileHelper.cpp  Path.cpp  Path.h
src/Matuna.Math/: CMakeLists.txt  Matrix.cpp  Matrix.h
src/Matuna.OCLConvNet/: AccumulateVectorKernel.cpp  AccumulateVectorKernel.h  AccumulateVectorScalarKernel.cpp  BackConvolutionKernel.cpp  BackPerceptronKernel.cpp  CMakeLists.txt  CheckPrecision.h  ConvolutionKernel.cpp  ConvolutionLayer.cpp  ConvolutionLayer.h  DivideByScalarKernel.cpp  ErrorKernel.cpp  ForwardPerceptronKernel.cpp  ForwardPerceptronKernel.h  GradientPerceptronKernel.cpp  GradientPerceptronKernel.h  ImageBackPerceptronKernel.cpp  ImageErrorKernel.cpp  ImageErrorKernel.h  ImageForwardPerceptronKernel.cpp  ImageGradientPerceptronKernel.cpp  ImageOutputKernel.cpp  ImageOutputKernel.h  InputDataBufferQueue.cpp  LayerKernel.cpp  LayerKernel.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h  MultiplyAllUnitsKernel.cpp  MultiplyAllUnitsKernel.h  MultiplyWithOffsetKernel.cpp  MultiplyWithOffsetKernel.h  OCLConvNet.cpp  OCLConvNet.h  OCLConvNetFactoryVisitor.cpp  OCLConvNetFactoryVisitor.h  OCLForwardBackPropLayer.cpp  OCLForwardBackPropLayer.h  OutputKernel.cpp  PerceptronLayer.cpp  (+11 more)
src/Matuna.OCLHelper/: CMakeLists.txt  IMatunaParsable.h  MatunaParser.cpp  OCLContext.cpp  OCLContext.h  OCLDevice.cpp  OCLDevice.h  OCLDeviceConfig.h  OCLDeviceInfo.cpp  OCLDeviceInfo.h  OCLEvent.cpp  OCLEvent.h  OCLHelper.cpp  OCLInclude.h  OCLKernel.cpp  OCLKernel.h  OCLKernelInfo.cpp  OCLKernelInfo.h  OCLMemory.cpp  OCLMemory.h  OCLPlatformInfo.h  OCLProgram.cpp  OCLProgram.h  OCLSourceKernel.cpp  OCLSourceKernel.h  OCLUtility.h
src/OCLConvNet/: AccumulateVectorKernel.h  BackConvolutionKernel.h  CMakeLists.txt  ConvNetOCLFactoryVisitor.cpp  ConvNetOCLFactoryVisitor.h  ConvolutionKernel.cpp  ConvolutionKernel.h  ConvolutionLayer.h  DivideByScalarKernel.cpp  ErrorKernel.h  GradientPerceptronKernel.cpp  GradientPerceptronKernel.h  ImageErrorKernel.cpp  ImageGradientPerceptronKernel.cpp  ImageOutputKernel.cpp  ImageOutputKernel.h  (+12 more)
test/: CMakeLists.txt
(+478 files in other folders)
