# <Copyright Holder>. Copyright (C) <Copyright Year(s)>. <License>.

#
# Project Properties
#

CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
PROJECT (ATML)
SET (APPLICATION_NAME "ATML")
SET (APPLICATION_CODENAME "Platon")
SET (APPLICATION_COPYRIGHT_YEARS "2015")
SET (APPLICATION_VERSION_MAJOR 0)
SET (APPLICATION_VERSION_MINOR 1)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE SNAPSHOT)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET (APPLICATION_VENDOR_ID "com.yourcompany")
SET (APPLICATION_VENDOR_NAME "Your Company")
SET (APPLICATION_VENDOR_URL "yourcompany.com")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

#
# Debugging Options
#

SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release

#
# Cleaning previous include folder
#

FILE(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/include)
FILE(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/include)

#
# Project Output Paths
#

SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")

#
# Project Search Paths
#

SET (ALL_INCLUDE_DIRECTORIES "${MAINFOLDER}/include")
LIST (APPEND ALL_INCLUDE_DIRECTORIES "${MAINFOLDER}/thirdparty/include") 
INCLUDE_DIRECTORIES(${ALL_INCLUDE_DIRECTORIES})

LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/tools")
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/thirdparty")
SET (CMAKE_MODULE_PATH "${MAINFOLDER}/tools/share/cmake")

#
# Locate Project Prerequisites 
#

FIND_PACKAGE(OpenCL REQUIRED)
IF(DEFINED OPENCL_INCLUDE_DIRS)
	INCLUDE_DIRECTORIES(${OpenCL_INCLUDE_DIRS})
ELSEIF(DEFINED OPENCL_INCLUDES)
	INCLUDE_DIRECTORIES(${OpenCL_INCLUDES})
ELSE (DEFINED OPENCL_INCLUDE_DIRS)
	MESSAGE(FATAL_ERROR "The OpenCL include directory could not be found")
ENDIF(DEFINED OPENCL_INCLUDE_DIRS)

IF(DEFINED OPENCL_LIBRARIES)
	LINK_DIRECTORIES(${OpenCL_LIBRARIES})
ELSEIF(DEFINED OPENCL_LIBS)
	LINK_DIRECTORIES(${OpenCL_LIBS})
ELSE(DEFINED OPENCL_LIBRARIES)
	MESSAGE(FATAL_ERROR "The OpenCL library directory could not be found")
ENDIF(DEFINED OPENCL_LIBRARIES)

#
# Configure Files
#

FILE (GLOB_RECURSE CONFIGINPUTS1 include/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS2 include/*.h.in.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS3 src/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS4 src/*.h.in.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS5 test/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS6 test/*.h.in.cmake)
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS3}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS4}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS5}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS6}")
FOREACH (CONFIGINPUT ${CONFIGINPUTS})
    STRING (REPLACE ".in.h.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
    STRING (REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})

#
# Adding third party build targets. Important for third party source code that
# we want to build for different platforms. Must be build before everything else.
#

ADD_SUBDIRECTORY(thirdparty)

#
# Add Build Targets
#

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

#
# Add Install Targets
#

IF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
    INSTALL(DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}" DESTINATION "include")
ENDIF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")

#
# Add Documentation Targets
#

INCLUDE (DocumentationTargets)
