

SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release
CMAKE_MINIMUM_REQUIRED (VERSION 3.2.0)
PROJECT (Matuna.Samples)

SET (MAINFOLDER "${PROJECT_SOURCE_DIR}/..")
SET (CMAKE_MODULE_PATH "${MAINFOLDER}/share/cmake")

INCLUDE(TuneUpCompilerWarnings)
INCLUDE(C11Support)
INCLUDE(OpenCLSupport)
INCLUDE(AndroidCompilerFlags)
INCLUDE(SetProjectPaths)

SET (ALL_INCLUDE_DIRECTORIES "${MAINFOLDER}/thirdparty/include")
LIST (APPEND ALL_INCLUDE_DIRECTORIES "${MAINFOLDER}/include")
LIST (APPEND ALL_INCLUDE_DIRECTORIES "${MAINFOLDER}/samples")
IF(ANDROID)
	LIST (APPEND ALL_INCLUDE_DIRECTORIES "${MAINFOLDER}/thirdparty/include/Android")
ENDIF(ANDROID)

INCLUDE_DIRECTORIES(${ALL_INCLUDE_DIRECTORIES})

#Add targets

FILE (GLOB_RECURSE sources_SRCS Matuna.MNISTSample1/*.cpp Matuna.MNISTSample1/*.cxx Matuna.MNISTSample1/*.cc Matuna.MNISTSample1/*.C  Matuna.MNISTSample1/*.c  Matuna.MNISTSample1/*.h  Matuna.MNISTSample1/*.hpp)
ADD_EXECUTABLE(Matuna.MNISTSample1 ${sources_SRCS})
TARGET_LINK_LIBRARIES(Matuna.MNISTSample1 Matuna.OCLConvNet Matuna.OCLHelper ${OCL_LIBRARY} Matuna.ConvNet Matuna.Helper Matuna.Math)
SET_TARGET_PROPERTIES(Matuna.MNISTSample1 PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.MNISTSample1 PROPERTIES OUTPUT_NAME "Matuna.MNISTSample1" CLEAN_DIRECT_OUTPUT 1)

ADD_CUSTOM_COMMAND(
TARGET Matuna.MNISTSample1 
POST_BUILD
COMMAND ${CMAKE_COMMAND}
ARGS -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/assets ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/assets
)

ADD_CUSTOM_COMMAND(
TARGET Matuna.MNISTSample1
POST_BUILD
COMMAND ${CMAKE_COMMAND}
ARGS -E copy_directory ${LIBRARY_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/kernels ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/kernels
)