FILE (GLOB_RECURSE CNN_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE CNN_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC

ADD_LIBRARY(CNN STATIC ${CNN_SRCS})
TARGET_LINK_LIBRARIES(OpenCLHelper)
SET_TARGET_PROPERTIES(CNN PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(CNN PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "CNN" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${CNN_HEADERS} DESTINATION ${MAINFOLDER}/include/CNN)

#Install directives

