FILE (GLOB_RECURSE ConvNet_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE ConvNet_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC

ADD_LIBRARY(ConvNet STATIC ${ConvNet_SRCS})
SET_TARGET_PROPERTIES(ConvNet PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(ConvNet PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "ConvNet" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${ConvNet_HEADERS} DESTINATION ${MAINFOLDER}/include/ConvNet)

#Install directives

