FILE (GLOB_RECURSE CNNOCL_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE CNNOCL_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC
FILE (GLOB_RECURSE CNNKernels *.cl) #FIXME: Works but sucks

ADD_LIBRARY(CNNOCL STATIC ${CNNOCL_SRCS})
TARGET_LINK_LIBRARIES(CNNOCL CNN OCLHelper Helper Math)
SET_TARGET_PROPERTIES(CNNOCL PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(CNNOCL PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "CNNOCL" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${CNNOCL_HEADERS} DESTINATION ${MAINFOLDER}/include/CNNOCL)
FILE(COPY ${CNNKernels} DESTINATION ${MAINFOLDER}/lib/kernels) #FIXME: This sucks
FILE(COPY ${CNNKernels} DESTINATION ${MAINFOLDER}/bin/kernels) #FIXME: This sucks

#Install directives

