FILE (GLOB_RECURSE ConvNetOCL_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE ConvNetOCL_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC
FILE (GLOB_RECURSE ConvNetKernels *.cl) #FIXME: Works but sucks

ADD_LIBRARY(ConvNetOCL STATIC ${ConvNetOCL_SRCS})
TARGET_LINK_LIBRARIES(ConvNetOCL ConvNet OCLHelper Helper Math)
SET_TARGET_PROPERTIES(ConvNetOCL PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(ConvNetOCL PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "ConvNetOCL" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${ConvNetOCL_HEADERS} DESTINATION ${MAINFOLDER}/include/ConvNetOCL)
FILE(COPY ${ConvNetKernels} DESTINATION ${MAINFOLDER}/lib/kernels) #FIXME: This sucks
FILE(COPY ${ConvNetKernels} DESTINATION ${MAINFOLDER}/bin/kernels) #FIXME: This sucks

#Install directives

