FILE (GLOB_RECURSE CNNOpenCL_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE CNNOpenCL_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC

ADD_LIBRARY(CNNOpenCL STATIC ${CNNOpenCL_SRCS})
TARGET_LINK_LIBRARIES(CNNOpenCL OpenCLHelper )
SET_TARGET_PROPERTIES(CNNOpenCL PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(CNNOpenCL PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "CNNOpenCL" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${CNNOpenCL_HEADERS} DESTINATION ${MAINFOLDER}/include/CNNOpenCL)

#Install directives

