FILE (GLOB_RECURSE ConvNet_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE ConvNet_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC

ADD_LIBRARY(Matuna.ConvNet STATIC ${ConvNet_SRCS})
SET_TARGET_PROPERTIES(Matuna.ConvNet PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.ConvNet PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "Matuna.ConvNet" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${ConvNet_HEADERS} DESTINATION ${MAINFOLDER}/include/Matuna.ConvNet)

#Install directives

