FILE (GLOB_RECURSE Helper_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_LIBRARY(Matuna.Helper STATIC ${Helper_SRCS})
SET_TARGET_PROPERTIES(Matuna.Helper PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.Helper PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "Matuna.Helper" CLEAN_DIRECT_OUTPUT 1)

#Install directives

