FILE (GLOB_RECURSE Math_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE Math_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC

ADD_LIBRARY(Matuna.Math STATIC ${Math_SRCS})
SET_TARGET_PROPERTIES(Matuna.Math PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.Math PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "Matuna.Math" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${Math_HEADERS} DESTINATION ${MAINFOLDER}/include/Matuna.Math)

#Install directives

