FILE (GLOB OCLConvNet_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB OCLConvNet_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC
FILE (GLOB_RECURSE ConvNetKernels kernels/*.cl kernels/*.h) #FIXME: Works but sucks

ADD_LIBRARY(Matuna.OCLConvNet STATIC ${OCLConvNet_SRCS})
TARGET_LINK_LIBRARIES(Matuna.OCLConvNet Matuna.ConvNet Matuna.OCLHelper Matuna.Helper Matuna.Math)
SET_TARGET_PROPERTIES(Matuna.OCLConvNet PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.OCLConvNet PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "Matuna.OCLConvNet" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${OCLConvNet_HEADERS} DESTINATION ${MAINFOLDER}/include/Matuna.OCLConvNet)
FILE(COPY ${ConvNetKernels} DESTINATION ${MAINFOLDER}/lib/kernels) #FIXME: This sucks
FILE(COPY ${ConvNetKernels} DESTINATION ${MAINFOLDER}/bin/kernels) #FIXME: This sucks

#Install directives

