FILE (GLOB_RECURSE OCLConvNet_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp kernels/*.cl kernels/*.h)

message(STATUS ${OCL_LIBRARY})

ADD_LIBRARY(Matuna.OCLConvNet STATIC ${OCLConvNet_SRCS})
TARGET_LINK_LIBRARIES(Matuna.OCLConvNet ${OCL_LIBRARY} Matuna.ConvNet Matuna.OCLHelper Matuna.Helper Matuna.Math)
SET_TARGET_PROPERTIES(Matuna.OCLConvNet PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.OCLConvNet PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "Matuna.OCLConvNet" CLEAN_DIRECT_OUTPUT 1)

ADD_CUSTOM_COMMAND(
TARGET Matuna.OCLConvNet 
POST_BUILD
COMMAND ${CMAKE_COMMAND}
ARGS -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/kernels ${LIBRARY_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/kernels
)

