FILE (GLOB_RECURSE OCLHelper_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_LIBRARY(Matuna.OCLHelper STATIC ${OCLHelper_SRCS})
TARGET_LINK_LIBRARIES(Matuna.OCLHelper ${OCL_LIBRARY} Matuna.Helper)
SET_TARGET_PROPERTIES(Matuna.OCLHelper PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.OCLHelper PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "Matuna.OCLHelper" CLEAN_DIRECT_OUTPUT 1)

#Install directives

