FILE (GLOB_RECURSE OCLConvNet_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE OCLConvNet_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC
FILE (GLOB_RECURSE ConvNetKernels *.cl) #FIXME: Works but sucks

ADD_LIBRARY(OCLConvNet STATIC ${OCLConvNet_SRCS})
TARGET_LINK_LIBRARIES(OCLConvNet ConvNet OCLHelper Helper Math)
SET_TARGET_PROPERTIES(OCLConvNet PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(OCLConvNet PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "OCLConvNet" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${OCLConvNet_HEADERS} DESTINATION ${MAINFOLDER}/include/OCLConvNet)
FILE(COPY ${ConvNetKernels} DESTINATION ${MAINFOLDER}/lib/kernels) #FIXME: This sucks
FILE(COPY ${ConvNetKernels} DESTINATION ${MAINFOLDER}/bin/kernels) #FIXME: This sucks

#Install directives

