FILE (GLOB_RECURSE OCLHelper_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE OCLHelper_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC

ADD_LIBRARY(OCLHelper STATIC ${OCLHelper_SRCS})
TARGET_LINK_LIBRARIES(OCLHelper ${OCL_LIBRARY})
SET_TARGET_PROPERTIES(OCLHelper PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(OCLHelper PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "OCLHelper" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${OCLHelper_HEADERS} DESTINATION ${MAINFOLDER}/include/OCLHelper)

#Install directives

