FILE (GLOB_RECURSE OpenCLHelper_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
FILE (GLOB_RECURSE OpenCLHelper_HEADERS *.h *.hpp) #WORKS HERE BUT NOT VERY GENERIC

ADD_LIBRARY(OpenCLHelper STATIC ${OpenCLHelper_SRCS})
TARGET_LINK_LIBRARIES(OpenCLHelper ${OpenCL_LIBRARY})
SET_TARGET_PROPERTIES(OpenCLHelper PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(OpenCLHelper PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "OpenCLHelper" CLEAN_DIRECT_OUTPUT 1)
FILE(COPY ${OpenCLHelper_HEADERS} DESTINATION ${MAINFOLDER}/include/OpenCLHelper)

#Install directives

