ADD_SUBDIRECTORY(OCLDeviceHandlerTest)
ADD_SUBDIRECTORY(OCLDeviceTest)
ADD_SUBDIRECTORY(CNNLayerInterlockTest)
ADD_SUBDIRECTORY(CNNOCLInitializationTest)
ADD_SUBDIRECTORY(OCLCNNPerceptronTest)
ADD_SUBDIRECTORY(MathMatrixTest)
ADD_SUBDIRECTORY(OCLCNNStandardOutputLayerTest)
ADD_SUBDIRECTORY(OCLCNNBackPropPerceptronTest)
ADD_SUBDIRECTORY(OCLCNNGradientPerceptronTest)
ADD_SUBDIRECTORY(OCLSumAllUnitsKernelTest)
ADD_SUBDIRECTORY(OCLConvolutionKernelTest)
ADD_SUBDIRECTORY(OCLZeroBorderKernelTest)
ADD_SUBDIRECTORY(OCLMultiplyAllUnitsKernelTest)
ADD_SUBDIRECTORY(OCLBackConvolutionKernelTest)
ADD_SUBDIRECTORY(OCLCNNForwardConvolutionTest)
ADD_SUBDIRECTORY(OCLCNNBackConvolutionTest)
ADD_SUBDIRECTORY(OCLCNNGradientConvolutionTest)
ADD_SUBDIRECTORY(OCLCNNGradientTest)
ADD_SUBDIRECTORY(OCLCNNGDTrainingTest)