ADD_SUBDIRECTORY(OCLDeviceHandlerTest)
ADD_SUBDIRECTORY(OCLDeviceTest)
ADD_SUBDIRECTORY(ConvNetLayerInterlockTest)
ADD_SUBDIRECTORY(OCLConvNetInitializationTest)
ADD_SUBDIRECTORY(OCLConvNetPerceptronTest)
ADD_SUBDIRECTORY(MathMatrixTest)
ADD_SUBDIRECTORY(OCLConvNetStandardOutputLayerTest)
ADD_SUBDIRECTORY(OCLConvNetBackPropPerceptronTest)
ADD_SUBDIRECTORY(OCLConvNetGradientPerceptronTest)
ADD_SUBDIRECTORY(OCLSumAllUnitsKernelTest)
ADD_SUBDIRECTORY(OCLConvolutionKernelTest)
ADD_SUBDIRECTORY(OCLZeroBorderKernelTest)
ADD_SUBDIRECTORY(OCLMultiplyAllUnitsKernelTest)
ADD_SUBDIRECTORY(OCLBackConvolutionKernelTest)
ADD_SUBDIRECTORY(OCLConvNetForwardConvolutionTest)
ADD_SUBDIRECTORY(OCLConvNetBackConvolutionTest)
ADD_SUBDIRECTORY(OCLConvNetGradientConvolutionTest)
ADD_SUBDIRECTORY(OCLConvNetGradientTest)
ADD_SUBDIRECTORY(OCLConvNetGDTrainingTest)