ADD_SUBDIRECTORY(Matuna.OCLDeviceHandlerTest)
ADD_SUBDIRECTORY(Matuna.OCLDeviceTest)
ADD_SUBDIRECTORY(Matuna.ConvNetLayerInterlockTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetInitializationTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetPerceptronTest)
ADD_SUBDIRECTORY(Matuna.MathMatrixTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetStandardOutputLayerTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetBackPropPerceptronTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetGradientPerceptronTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetForwardConvolutionTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetBackConvolutionTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetGradientConvolutionTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetGradientTest)
ADD_SUBDIRECTORY(Matuna.OCLConvNetGDTrainingTest)
ADD_SUBDIRECTORY(Matuna.OCLProgramTest)
ADD_SUBDIRECTORY(Matuna.OCLLayerKernelTest)