FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(MNISTSample1 ${sources_SRCS})
TARGET_LINK_LIBRARIES(MNISTSample1 ConvNetOCL ConvNet Math)
SET_TARGET_PROPERTIES(MNISTSample1 PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(MNISTSample1 PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "MNISTSample1" CLEAN_DIRECT_OUTPUT 1)

#Install directives

